<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/mex_general_preference_screen">

    <ListPreference
        android:defaultValue="mexdemo.dme.mobiledgex.net"
        android:entries="@array/pref_dme_hostname_titles"
        android:entryValues="@array/pref_dme_hostname_values"
        android:key="@string/dme_hostname"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/pref_summary_dme_hostname"
        android:title="@string/pref_title_dme_hostname" />
    <SwitchPreference
        android:key="@string/preference_net_switching_allowed"
        android:title="@string/preference_net_switching_allowed_title"
        android:summary="@string/preference_net_switching_allowed_summary"
        android:defaultValue="false" />

</PreferenceScreen>