<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/pqoe_map_mode"
        android:id="@+id/action_pqoe_map_mode">
        <menu>
            <group>
                <item
                    android:id="@+id/action_pqoe_mode_route"
                    android:checkable="true"
                    android:onClick="onModeGroupItemClick"
                    android:title="@string/pqoe_route_mode" />
                <item
                    android:id="@+id/action_pqoe_mode_grid"
                    android:checkable="true"
                    android:onClick="onModeGroupItemClick"
                    android:title="@string/pqoe_grid_mode" />
            </group>
        </menu>
    </item>
    <item android:title="@string/map_type">
        <menu>
            <group>
                <item
                    android:id="@+id/action_pqoe_map_type_normal"
                    android:checkable="true"
                    android:onClick="onTypeGroupItemClick"
                    android:title="@string/pqoe_map_type_normal" />
                <item
                    android:id="@+id/action_pqoe_map_type_silver"
                    android:checkable="true"
                    android:onClick="onTypeGroupItemClick"
                    android:title="@string/pqoe_map_type_silver" />
                <item
                    android:id="@+id/action_pqoe_map_type_satellite"
                    android:checkable="true"
                    android:onClick="onTypeGroupItemClick"
                    android:title="@string/pqoe_map_type_satellite" />
                <item
                    android:id="@+id/action_pqoe_map_type_terrain"
                    android:checkable="true"
                    android:onClick="onTypeGroupItemClick"
                    android:title="@string/pqoe_map_type_terrain" />
                <item
                    android:id="@+id/action_pqoe_map_type_hybrid"
                    android:checkable="true"
                    android:onClick="onTypeGroupItemClick"
                    android:title="@string/pqoe_map_type_hybrid" />
            </group>
        </menu>
    </item>
</menu>